fixed the footer

--- a/mysite/spotifyWrapped/templates/spotifyWrapped/home.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/home.html
@@ -200,7 +200,7 @@
     </script>
 </body>
 <!-- Footer Section -->
-<footer class=".footer-section">
+<footer class="footer-section">
     <div class="contact-dev">
         <h2>Contact the Dev Team</h2>
         <p>Have any questions or feedback? <a href="mailto:jlee4103@gatech.edu"><i class="fas fa-envelope"></i> Send us an email</a></p>
